[gd_scene load_steps=11 format=2]

[ext_resource path="res://Images/ship_sidesB.png" type="Texture" id=1]
[ext_resource path="res://Scenes/Player/Player.gd" type="Script" id=2]
[ext_resource path="res://Audio/SoundEffects/Thrusters.ogg" type="AudioStream" id=3]
[ext_resource path="res://Scenes/Player/MuzzleFlash/MuzzleFlash.tscn" type="PackedScene" id=4]
[ext_resource path="res://Images/PlayerShipNormal.png" type="Texture" id=5]
[ext_resource path="res://Scenes/Player/LineTrail.tscn" type="PackedScene" id=6]
[ext_resource path="res://Scenes/Player/Camera2D.gd" type="Script" id=7]
[ext_resource path="res://Scenes/Player/ChromaticAbberation.shader" type="Shader" id=8]

[sub_resource type="CircleShape2D" id=1]
radius = 48.0536

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 8 )
shader_param/scale = 0.0
shader_param/max_scale = 10.0
shader_param/intensity = 2.0

[node name="KinematicBody2D" type="KinematicBody2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 1 )
normal_map = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true
zoom = Vector2( 1.75, 1.75 )
smoothing_enabled = true
smoothing_speed = 7.5
script = ExtResource( 7 )

[node name="Timer" type="Timer" parent="Camera2D"]
one_shot = true

[node name="Tween" type="Tween" parent="Camera2D"]

[node name="CanvasLayer" type="CanvasLayer" parent="Camera2D"]

[node name="ColorRect" type="ColorRect" parent="Camera2D/CanvasLayer"]
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="ThrustersAudio" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )
volume_db = -5.0
autoplay = true
bus = "SoundEffects"

[node name="BarrelPosition2D" type="Position2D" parent="."]
show_behind_parent = true
position = Vector2( 0, -70 )

[node name="MuzzleFlash" parent="BarrelPosition2D" instance=ExtResource( 4 )]

[node name="LineTrails" type="Node2D" parent="."]

[node name="FrontRightTrail" parent="LineTrails" instance=ExtResource( 6 )]
position = Vector2( 50, -20 )
MAX_POINTS = 4
light_color = Color( 0.329412, 1, 0.980392, 1 )

[node name="FrontLeftTrail" parent="LineTrails" instance=ExtResource( 6 )]
position = Vector2( -50, -20 )
MAX_POINTS = 4

[node name="BackLeftTrail" parent="LineTrails" instance=ExtResource( 6 )]
position = Vector2( -45, 45 )
MAX_POINTS = 5

[node name="BackRightTrail" parent="LineTrails" instance=ExtResource( 6 )]
position = Vector2( 45, 45 )
MAX_POINTS = 5

[connection signal="timeout" from="Camera2D/Timer" to="Camera2D" method="_on_Timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_ShootTimer_timeout"]
